feat: implemented 6th lab